# dreadnode-ares

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  codecov.yml  test.sh
ares-cli/: Cargo.toml
ares-cli/src/: config.rs  transport.rs  util.rs
ares-cli/src/blue/: delete.rs  submit.rs
ares-cli/src/cli/: ops.rs
ares-cli/src/dedup/: credentials.rs  domains.rs  labels.rs  tests.rs  users.rs
ares-cli/src/detection/: markdown.rs  playbook.rs  queries.rs
ares-cli/src/detection/techniques/: tests.rs
ares-cli/src/history/: search.rs  types.rs
ares-cli/src/ops/: delete.rs  evaluate.rs  inject.rs  list.rs  mod.rs  replay.rs  resolve.rs  stop.rs
ares-cli/src/ops/loot/format/: display.rs  hosts.rs  json.rs  mod.rs
ares-cli/src/orchestrator/: automation_spawner.rs  completion.rs  config.rs  deferred.rs  exploitation.rs  llm_runner.rs  mod.rs  monitoring.rs  results.rs  routing.rs  strategy.rs  task_queue.rs  throttling.rs
ares-cli/src/orchestrator/automation/: acl.rs  acl_discovery.rs  adcs.rs  adcs_exploitation.rs  bloodhound.rs  certipy_auth.rs  coercion.rs  credential_access.rs  credential_expansion.rs  credential_reuse.rs  cross_forest_enum.rs  dacl_abuse.rs  delegation.rs  foreign_group_enum.rs  gmsa.rs  golden_ticket.rs  gpo.rs  gpp_sysvol.rs  group_enumeration.rs  laps.rs  mod.rs  mssql.rs  mssql_exploitation.rs  mssql_link_pivot.rs  ntlm_relay.rs  pth_spray.rs  rbcd.rs  s4u.rs  secretsdump.rs  shadow_credentials.rs  share_enum.rs  shares.rs  stall_detection.rs  trust.rs  unconstrained.rs
ares-cli/src/orchestrator/blue/: auto_submit.rs  callbacks.rs  chaining.rs  investigation.rs  runner.rs  sub_agent.rs
ares-cli/src/orchestrator/callback_handler/: mod.rs  tests.rs
ares-cli/src/orchestrator/dispatcher/: mod.rs  submission.rs  task_builders.rs
ares-cli/src/orchestrator/output_extraction/: hashes.rs  hosts.rs  mod.rs  shares.rs  tests.rs  users.rs
ares-cli/src/orchestrator/recovery/: dedup.rs  manager.rs  mod.rs  normalize.rs  types.rs
ares-cli/src/orchestrator/result_processing/: admin_checks.rs  mod.rs  parsing.rs  tests.rs  timeline.rs
ares-cli/src/orchestrator/state/: dedup.rs  inner.rs  mod.rs  persistence.rs  replay.rs  shared.rs
ares-cli/src/orchestrator/tool_dispatcher/: mod.rs  redis_dispatcher.rs  tests.rs
ares-cli/src/worker/: blue_task_loop.rs  config.rs  credential_resolver.rs  hosts.rs  mod.rs  tool_check.rs  tool_executor.rs
ares-cli/src/worker/task_loop/: executor.rs  mod.rs  result_handler.rs  types.rs
ares-core/: Cargo.toml
ares-core/src/: lib.rs  nats.rs  op_state_log.rs  token_usage.rs
ares-core/src/config/: defaults.rs  mod.rs  sections.rs
ares-core/src/correlation/alert/: cluster.rs  correlator.rs  tests.rs
ares-core/src/correlation/lateral/: analyzer.rs  graph.rs  patterns.rs  tests.rs
ares-core/src/correlation/redblue/: engine.rs  report.rs  tests.rs  types.rs
ares-core/src/detection/: detections.yaml  mod.rs
ares-core/src/eval/: results.rs
ares-core/src/eval/gap_analysis/: analysis.rs  recommendations.rs  tests.rs  types.rs
ares-core/src/eval/ground_truth/: mappings.rs  schema.rs  tests.rs  transform.rs
ares-core/src/eval/scorers/: evaluate.rs  scoring.rs  tests.rs  types.rs
ares-core/src/eval/workflow/: costs.rs  tests.rs
ares-core/src/models/: blue.rs  core.rs  mod.rs  operation.rs  task.rs  util.rs
ares-core/src/parsing/: delegation.rs  domain_sid.rs  hosts.rs  kerberos.rs  ntlm.rs  secretsdump.rs  shares.rs  types.rs
ares-core/src/persistent_store/: config.rs  store.rs
ares-core/src/persistent_store/queries/: coverage.rs
ares-core/src/reports/: context.rs  mitre.rs  mod.rs  redteam.rs  util.rs  vuln_details.rs
ares-core/src/state/: blue_operations.rs  blue_reader.rs  blue_task_queue.rs  blue_writer.rs  dedup_keys.rs  keys.rs  mock_redis.rs  mod.rs  operations.rs  reader.rs
ares-core/src/telemetry/: init.rs  mitre.rs  propagation.rs  target.rs
ares-core/src/telemetry/spans/: builder.rs  helpers.rs  mod.rs
ares-llm/: Cargo.toml
ares-llm/examples/: smoke_test.rs
ares-llm/src/agent_loop/: callbacks.rs  config.rs  context.rs  retry.rs  runner.rs  tests.rs
ares-llm/src/prompt/: blue.rs  helpers.rs  mod.rs  state_context.rs  templates.rs  tests.rs
ares-llm/src/prompt/credential_access/: mod.rs  no_cred.rs
ares-llm/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
ares-llm/src/routing/: credentials.rs  dc_discovery.rs  domain.rs  enrichment.rs  mod.rs  util.rs
ares-llm/src/tool_registry/: mod.rs
ares-llm/src/tool_registry/blue/: mod.rs
ares-llm/src/tool_registry/credential_access/: netexec_tools.rs
ares-llm/src/tool_registry/privesc/: tickets.rs
ares-llm/templates/blueteam/agents/: lateral_analyst.md.tera  orchestrator.md.tera  threat_hunter.md.tera  triage.md.tera
ares-llm/templates/redteam/agents/: credential_access.md.tera  orchestrator.md.tera  recon.md.tera  system_instructions.md.tera
ares-llm/templates/redteam/tasks/: credaccess_low_hanging_no_creds.md.tera
ares-llm/tests/: integration_agent_loop.rs  span_regressions.rs
ares-llm/tests/common/: mod.rs  span_capture.rs
ares-tools/: Cargo.toml
ares-tools/src/: acl.rs  args.rs  coercion.rs  cracker.rs  credentials.rs  executor.rs  lib.rs  recon.rs
ares-tools/src/blue/: evidence_validator.rs  loki.rs  persistence.rs  prometheus.rs
ares-tools/src/blue/detection/: mod.rs  tests.rs
ares-tools/src/blue/engines/: data.rs  mitre.rs  pyramid.rs  tools.rs
ares-tools/src/blue/grafana/: query.rs  rules.rs
ares-tools/src/blue/investigation/: analysis.rs  mod.rs  read.rs  write.rs
ares-tools/src/blue/learning/: mitre_db.rs  playbook.rs
ares-tools/src/credential_access/: kerberos.rs  misc.rs  mod.rs  secretsdump.rs
ares-tools/src/lateral/: execution.rs  kerberos.rs  mssql.rs  pth.rs
ares-tools/src/parsers/: certipy.rs  cracker.rs  credential_tools.rs  delegation.rs  mod.rs  mssql.rs  nmap.rs  ntsd.rs  secrets.rs  smb.rs  spider.rs  trust.rs  users_shares.rs
ares-tools/src/privesc/: adcs.rs  cve_exploits.rs  delegation.rs  gmsa.rs  mod.rs  trust.rs
docs/: blue.md  (+5 more)
(+169 files in other folders)
