[workspace]
resolver = "2"
members = ["ares-core", "ares-cli", "ares-llm", "ares-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
async-nats = "0.48"
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4.5.23", features = ["derive", "env"] }
serde_yaml = "0.9"
regex = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid"] }
tera = "1"
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config"] }

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-rustls", "trace"] }
tracing-opentelemetry = "0.32"
opentelemetry-semantic-conventions = "0.31"

# Fast deploy profile: optimized for compile speed, acceptable runtime perf.
# Use `task ec2:deploy BUILD_PROFILE=release` for production-grade optimization.
[profile.dev-deploy]
inherits = "release"
opt-level = 2          # ~40% faster compile vs opt-level=3, negligible perf difference for I/O-bound code
lto = "thin"           # ~3x faster link than fat LTO, still gets cross-crate inlining
codegen-units = 16     # Max parallelism during codegen (default release=1 is slow)
debug = false          # No debuginfo = smaller binary, faster link
strip = "symbols"      # Strip in cargo itself (no separate strip step needed)
incremental = true     # Huge win for iterative deploys (only recompile changed crates)
