[package]
name = "ares-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Ares red team orchestration system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
md-5 = "0.11"
base64 = "0.22"
tera = { workspace = true }
sqlx = { workspace = true }
sha2 = "0.11"

# OpenTelemetry (behind "telemetry" feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
rstest = "0.18"
approx = "0.5"

[features]
default = []
blue = []
telemetry = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
