[package]
name = "ares-core"
version = "0.2.0"
edition = "2021"
description = "Core library for the Ares red team orchestration system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
md-5 = "0.11"
base64 = "0.22"
tera = { workspace = true }
sqlx = { workspace = true }
sha2 = "0.11"

# OpenTelemetry (behind "telemetry" feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[build-dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = "3"
rstest = "0.26"
approx = "0.5"

[features]
default = ["blue"]
blue = []
test-utils = []
telemetry = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
